<resources>
    <string name="app_name">走走</string>
    <string name="app_test">This is a test string.</string>
    <string name="common_next">下一步</string>
    <string name="common_copy_to_clipboard">复制到剪贴板</string>
    <string name="common_i_know">我知道了</string>
    <string name="common_second">秒</string>
    <string name="common_ok">确认</string>
    <string name="common_cancel">取消</string>
    <string name="common_please_wait_for_a_moment">请稍等...</string>
    <string name="com_select">选择</string>
    <string name="common_search">搜索</string>
    <string name="common_select">选择</string>
    <string name="common_distance_unit_meter">米</string>
    <string name="common_distance_unit_kilometer">千米</string>
    <string name="common_age_secret">保密</string>
    <string name="err_account_already_exist">该账户已存在</string>
    <string name="err_connection_failed">无法连接服务器</string>
    <string name="err_username_password_mismatch">用户名密码不匹配</string>
    <string name="err_username_donot_exist">该手机号未注册</string>
    <string name="err_unknow">未知错误</string>
    <string name="err_login_infor_cannot_empty">用户名和密码不能为空</string>
    <string name="err_login_infor_is_illegal">用户名不合法</string>
    <string name="err_file_donot_exist">文件不存在</string>
    <string name="err_img_update_fail">上传头像失败</string>
    <string name="err_location_update_fail">上传位置失败</string>
    <string name="err_network_unavailable">当前网络不可用</string>
    <string name="warning_hint_memory_short">内存不足</string>
    <string name="err_del_speed_date_fail">同步服务器信息失败</string>
    <string name="dialog_title_default">操作确认</string>
    <string name="dialog_msg_default">您确定进行此操作吗?</string>
    <string name="dialog_not_show_this_again">不再显示此提示</string>
    <string name="register_create_account">创建账号</string>
    <string name="register_registe">注册</string>
    <string name="register_input_youraccount">请输入手机号</string>
    <string name="register_set_yournick">请设置昵称</string>
    <string name="register_input_checkcode">验证码</string>
    <string name="register_hint_input_checkcode">请输入验证码</string>
    <string name="register_finish">完成</string>
    <string name="register_time_next_reget">后重新获取验证码</string>
    <string name="register_user_exist">该用户已存在,请直接登录</string>
    <string name="register_sure_give_up_register">验证码短信可能稍有延迟，确定取消并重新开始？</string>
    <string name="register_reget_check_code">点击重新获取验证码</string>
    <string name="register_do_signup">注册中...</string>
    <string name="register_signup_success">注册成功</string>
    <string name="register_sms_already_sent">我们向%1$s发送了一个验证码</string>
    <string name="register_select_gender">请选择性别</string>
    <string name="login_hint_input_phone_num">请输入注册时的手机号</string>
    <string name="login_hint_input_password">请输入密码</string>
    <string name="login_dologin">登录</string>
    <string name="login_forgot_password">忘记密码</string>
    <string name="login_set_yourpassword">设置密码</string>
    <string name="login_nick_cannot_be_null">昵称不能为空</string>
    <string name="login_nick_beyond_length_limit">昵称过长</string>
    <string name="login_nick_cannot_contain_space">昵称不能包含空格</string>
    <string name="login_tel_cannot_be_null">手机号码不能为空</string>
    <string name="login_tel_are_illegal">手机号码不符合规则</string>
    <string name="login_password_cannot_be_null">密码不能为空</string>
    <string name="login_password_are_illegal">密码不符合规则</string>
    <string name="login_hint_logouting">正在退出当前账户</string>
    <string name="login_do_login_success">登录成功</string>
    <string name="login_hint_please_input_SMS_code">请输入验证码</string>
    <string name="login_hint_please_input_old_psw">请输入现在的密码</string>
    <string name="login_hint_please_input_new_psw">请输入新密码</string>
    <string name="login_hint_please_input_new_psw_again">请再次输入新密码</string>
    <string name="login_do_update_psw_suc">修改密码成功，请用新密码登录</string>
    <string name="login_please_confirm_new_psw">两次新密码输入不一致，请再次确认</string>
    <string name="setting_title">设置</string>
    <string name="setting_modify_password">修改密码</string>
    <string name="setting_check_update">检查更新</string>
    <string name="setting_user_protocol">用户协议</string>
    <string name="setting_about_app">关于走走</string>
    <string name="setting_do_logout">退出</string>
    <string name="setting_logout_or_not">退出当前账号？</string>
    <string name="setting_chat">聊天</string>
    <string name="profile_activity_title">个人信息</string>
    <string name="profile_infor_nick_name">昵称</string>
    <string name="profile_infor_portrait">头像</string>
    <string name="profile_infor_gendle">性别</string>
    <string name="profile_infor_birth">出生年月</string>
    <string name="profile_infor_signature">签名</string>
    <string name="profile_infor_phone">手机号码</string>
    <string name="profile_infor_update">完成</string>
    <string name="profile_infor_update_ok">个人信息成功更新</string>
    <string name="profile_infor_update_fail">人信息更新失败</string>
    <string name="profile_infor_location">位置</string>
    <string name="img_select_at_most_pic">您最多只能选择%1$d张照片</string>
    <string name="img_select_at_least_1_pic">请至少选择一张图片发送</string>
    <string name="img_pic_total_count">共%1$s张</string>
    <string name="img_select_pics_preview">预览</string>
    <string name="img_select_pics_preview_multi">预览</string>
    <string name="img_select_pics_finish_multi">完成</string>
    <string name="img_select_pics_send_multi">发送</string>
    <string name="img_open_camera_fail">打开相机失败</string>
    <string name="img_hint_please_select_pic">请先选择图片</string>
    <string name="img_pic_full_size">原图</string>
    <string name="img_pic_complete">完成</string>
    <string name="img_select_picture">选择图片</string>
    <string name="img_select_pics_all">所有图片</string>
    <string name="img_select_pics_choose_directory">目录选择</string>
    <string name="img_pic_browser">图片浏览</string>
    <string name="map_select_pos_title">位置</string>
    <string name="map_control_send">发送</string>
    <string name="map_posotion_nearby">附近</string>
    <string name="map_position_error_code">错误号：%1$d</string>
    <string name="map_position_overlay1">覆盖物1</string>
    <string name="map_position_requesting">获取中...</string>
    <string name="requesting_address">正在获取地址，暂时无法发送。</string>
    <string name="friends_title">好友列表</string>
    <string name="main_title">走走</string>
    <string name="msg_session_video">[视频]</string>
    <string name="msg_session_audio">[语音]</string>
    <string name="msg_session_picture">[图片]</string>
    <string name="msg_session_location">[位置]</string>
    <string name="msg_session_vcard">[文件]</string>
    <string name="msg_session_draft">[草稿]</string>
    <string name="msg_session_phone">[手机]</string>
    <string name="msg_session_sys_msg">[系统消息]</string>
    <string name="msg_check_network_settings">当前网络不可用，请检查你的网络设置。</string>
    <string name="msg_network_notice">您目前的网络不可用。</string>
    <string name="message_mark_select_all">全选</string>
    <string name="message_mark_clear_all">清除</string>
    <string name="message_mark_clear_top">消顶</string>
    <string name="menu_mark_delete">删除</string>
    <string name="menu_mark_collect">收藏</string>
    <string name="menu_mark_cancle_collect">取消收藏</string>
    <string name="menu_mark_foword">转发</string>
    <string name="menu_mark_copy">复制</string>
    <string name="menu_mark_more">更多</string>
    <string name="msg_msg_voice_press_speak">按住说话</string>
    <string name="msg_msg_voice_release_cancel">松开取消</string>
    <string name="msg_msg_voice_release_send">松开发送</string>
    <string name="msg_msg_voice_file_error">录音失败，请重试</string>
    <string name="msg_msg_voice_create_file_error">创建语音消息文件失败，无法发送</string>
    <string name="msg_msg_voice_record_duration_too_short">录音时间太短</string>
    <string name="msg_msg_voice_record_duration_too_long">录音时间太长</string>
    <string name="msg_msg_voice_cancel_send">放弃输入</string>
    <string name="msg_msg_voice_do_cancel_send_1">上滑放弃</string>
    <string name="msg_msg_voice_do_cancel_send_2">松开手指，取消发送</string>
    <string name="msg_msg_voice_time_remaining">还剩%1$d秒</string>
    <string name="msg_msg_no_select">请至少选择一条消息</string>
    <string name="msg_select_pics_preview">预览</string>
    <string name="msg_select_pics_all">所有图片</string>
    <string name="msg_select_pics_choose_directory">目录选择</string>
    <string name="msg_select_at_least_1_pic">请至少选择一张图片发送</string>
    <string name="msg_select_at_most_pic">您最多只能选择%1$d张照片</string>
    <string name="msg_select_pic">请先选择图片</string>
    <string name="msg_select_pics_preview_multi">预览(%1$d)</string>
    <string name="msg_select_pics_send_multi">发送(%1$d&#047;%2$d)</string>
    <string name="msg_select_pics_finish_multi">完成(%1$d&#047;%2$d)</string>
    <string name="chatting_send">发送</string>
    <string name="chatting_photos">照片</string>
    <string name="chatting_camera">拍摄</string>
    <string name="chatting_file">文件</string>
    <string name="chatting_video">视频</string>
    <string name="chatting_phrasebook">常用语</string>
    <string name="chatting_location">定位</string>
    <string name="chatting_timesend">定时发送</string>
    <string name="chatting_fire">阅后即焚</string>
    <string name="chatting_contacts">联系人</string>
    <string name="chatting_picture">图片</string>
    <string name="chatting_voice">视频聊天</string>
    <string name="chatting_delete">删除</string>
    <string name="chatting_resend">重新发送</string>
    <string name="chatting_browser_image">查看图片</string>
    <string name="chatting_preview_image">原图</string>
    <string name="file_broken_please_send_other_file">文件损坏或大于10M，发送失败</string>
    <string name="draft">[草稿]</string>
    <string name="public_accounts_name">公众号</string>
    <string name="public_accounts_year">年</string>
    <string name="public_accounts_day">日</string>
    <string name="public_accounts_month">月</string>
    <string name="hour_minute_separator">:</string>
    <string name="me">我</string>
    <string name="msg_send_fail">信息发送失败,重新发送消息？</string>
    <string name="msg_dialog_detail">聊天详情</string>
    <string name="msg_dialog_detail_not_set">未设置</string>
    <string name="msg_dialog_detail_set_top">置顶聊天</string>
    <string name="msg_dialog_detail_notify">消息提醒</string>
    <string name="msg_dialog_detail_view_friends">查看友圈</string>
    <string name="msg_dialog_detail_clear_chat_records">清空消息记录</string>
    <string name="clear_chat_log_hint">是否清空当前会话记录？</string>
    <string name="msg_network_connection_failed">
        如需要连接到互联网，可以参考以下方法：\n在设备的\"设置\"-\"Wi-Fi网络\"设置面板中选择一个可用的Wi-Fi热点接入。\n在设备的\"设置\"-\"通用\"-\"网络\"设置面板中启用蜂窝数据（启用后运营商可能会收取数据通信费用
        ）。\n如果您已接入Wi-Fi网络：\n请检查您所连接的Wi-Fi热点是否已接入互联网，或该热点是否允许您的设备访问互联网。
    </string>
    <string name="shut_video">关闭</string>
    <string name="load_fail_notice">加载失败，轻触屏幕重新加载</string>
    <string name="image_load_fail">图片加载错误</string>
    <string name="pause">暂停</string>
    <string name="resume_download">继续下载</string>
    <string name="download_fail">下载失败</string>
    <string name="msg_video_too_short">提示太短需要删除</string>
    <string name="msg_video_record_success">录制完成</string>
    <string name="msg_video_record_fail">录制失败</string>
    <string name="msg_up_to_giveup">上滑放弃</string>
    <string name="msg_loose_to_giveup">松开，放弃拍摄</string>
    <string name="msg_press_to_takevideo">按住拍摄</string>
    <string name="msg_too_short_for_lasttakevideo">距离上一次拍摄太短了</string>
    <string name="msg_pic_deleted_notices">原文件已经不存在</string>
    <string name="pic_full_size">原图</string>
    <string name="msg_pic_total_count">共%1$s张</string>
    <string name="open_camera_fail">打开相机失败</string>
    <string name="max_input_length">最多可以输入%1$s个字</string>
    <string name="msg_max_input_length">文字超出限制</string>
    <string name="message_receiver_hint">收件人</string>
    <string name="walk_rule_title">《走走守则》</string>
    <string name="walk_rule_content_1">&#183; 首次见面不能问对方联系方式</string>
    <string name="walk_rule_content_2">&#183; 首次见面不能问对方详细住址</string>
    <string name="walk_rule_content_3">&#183; 首次见面不能问对方尴尬问题</string>
    <string name="walk_rule_content_4">&#183; 不允许使用非文明用语</string>
    <string name="walk_rule_content_5">&#183; 不允许无故纠缠对方</string>
</resources>