<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bgcor1"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp" >

    <TextView
        android:id="@+id/dialog_notice_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:ellipsize="end"
        android:maxLines="10"
        android:text="@string/dialog_msg_default"
        android:textColor="@color/fontcor1"
        android:textSize="@dimen/font_size3_dp" />

    <CheckedTextView
        android:id="@+id/not_show_ctv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:checked="false"
        android:drawableLeft="@drawable/check_selecte_bg"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:text="@string/dialog_not_show_this_again"
        android:textColor="@color/fontcor2"
        android:textSize="@dimen/font_size6"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/dialog_cancel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/common_cancel"
            android:textColor="@color/fontcor1"
            android:textSize="@dimen/font_size2" />

        <Button
            android:id="@+id/dialog_ok_btn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:text="@string/common_ok"
            android:textColor="@color/fontcor6"
            android:textSize="@dimen/font_size2_dp" />
    </LinearLayout>

</LinearLayout>