<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent_black_background">

    <!-- Rules -->
    <RelativeLayout
            android:id="@+id/rl_walk_rule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/walk_rules_bg">

        <TextView android:id="@+id/tv_walk_title"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_alignParentTop="true"
                  android:layout_marginTop="30dp"
                  android:paddingLeft="10dp"
                  android:text="@string/walk_rule_title"
                  android:textColor="@color/fontcor1"
                  android:textSize="@dimen/font_size8"/>

        <TextView android:id="@+id/tv_walk_rules_1"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_below="@+id/tv_walk_title"
                  android:layout_marginTop="25dp"
                  android:paddingLeft="20dp"
                  android:text="@string/walk_rule_content_1"
                  android:textColor="@color/fontcor1"
                  android:textSize="@dimen/font_size2_dp"/>

        <TextView android:id="@+id/tv_walk_rules_2"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_below="@+id/tv_walk_rules_1"
                  android:layout_marginTop="10dp"
                  android:paddingLeft="20dp"
                  android:text="@string/walk_rule_content_2"
                  android:textColor="@color/fontcor1"
                  android:textSize="@dimen/font_size2_dp"/>

        <TextView android:id="@+id/tv_walk_rules_3"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_below="@+id/tv_walk_rules_2"
                  android:layout_marginTop="10dp"
                  android:paddingLeft="20dp"
                  android:text="@string/walk_rule_content_3"
                  android:textColor="@color/fontcor1"
                  android:textSize="@dimen/font_size2_dp"/>

        <TextView android:id="@+id/tv_walk_rules_4"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_below="@+id/tv_walk_rules_3"
                  android:layout_marginTop="10dp"
                  android:paddingLeft="20dp"
                  android:text="@string/walk_rule_content_4"
                  android:textColor="@color/fontcor1"
                  android:textSize="@dimen/font_size2_dp"/>

        <TextView android:id="@+id/tv_walk_rules_5"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_below="@+id/tv_walk_rules_4"
                  android:layout_marginTop="10dp"
                  android:paddingLeft="20dp"
                  android:text="@string/walk_rule_content_5"
                  android:textColor="@color/fontcor1"
                  android:textSize="@dimen/font_size2_dp"/>

        <View
                android:id="@+id/line"
                android:layout_width="0.5dp"
                android:layout_height="20dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/tv_walk_rules_5"
                android:background="@color/transparent"/>
    </RelativeLayout>

    <!-- X button -->
    <ImageView
            android:id="@+id/iv_finish_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="95dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/icon_delete"/>

</RelativeLayout>