<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/signin_homebg">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="54dp"
            android:id="@+id/title"
            android:text="@string/main_title"
            android:textColor="@color/fontcor3"
            android:textSize="@dimen/font_size9"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/line"
            android:layout_marginBottom="54dp"
            android:id="@+id/goto_login"
            android:text="@string/login_dologin"
            android:textColor="@color/fontcor3"
            android:textSize="@dimen/font_size3"
            android:background="@drawable/login_btn_bg"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/goto_login"
            android:id="@+id/goto_register"
            android:text="@string/register_create_account"
            android:textColor="@color/fontcor3"
            android:textSize="@dimen/font_size3"
            android:background="@drawable/login_btn_bg"/>

    <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/linecor1"/>
</RelativeLayout>